# ros_stuff

./: README.md
week1/: pub.txt  ros_task.launch
week1/smb_common/smb_highlevel_controller/: package.xml
week2/: config.yaml  hello_world.cpp  listener.cpp  scansub.cpp  talker.cpp
week2/smb_wk2/smb_highlevel_controller/include/smb_highlevel_controller/: SmbHighlevelController.hpp
week2/smb_wk2/smb_highlevel_controller/launch/: smb_highlevel_controller.launch
week2/smb_wk2/smb_highlevel_controller/rviz/: smb_highlevel_controller.rviz
week2/smb_wk2/smb_highlevel_controller/src/: SmbHighlevelController.cpp
week2_python/smb_highlevel_controller/launch/: smb_highlevel_controller.launch
week2_python/smb_highlevel_controller/src/: SmbHighlevelController.py
week3/smb_wk3/smb_highlevel_controller/: CMakeLists.txt  package.xml
week3/smb_wk3/smb_highlevel_controller/rviz/: smb_highlevel_controller.rviz
week4/: README.md
week4/smb_control/launch/: control.launch
week4/smb_highlevel_controller/launch/: smb_highlevel_controller.launch
week4/smb_highlevel_controller/src/: SmbHighlevelController.cpp
week4/smb_localization/: CMakeLists.txt  package.xml
week4/smb_localization/include/smb_localization/: SmbLocalization.hpp
week4/smb_localization/launch/: ekf_localization.launch
week4/smb_localization/src/: SmbLocalization.cpp  smb_localization_node.cpp
week5/smb_highlevel_controller/: CMakeLists.txt  package.xml
week5/smb_highlevel_controller/src/: SmbHighlevelController.cpp
(+1 files in other folders)
