<?xml version="1.0"?>
<package format="2">
  <name>smb_localization</name>
  <version>0.0.0</version>
  <description>The smb_localization package</description>

  <maintainer email="nghochi@todo.todo">nghochi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>smb_gazebo</exec_depend>
  
</package>
